[package]
name = "signal_timer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.155"
nix = { git = "https://github.com/ChrysoliteAzalea/nix", rev = "01a10675fd94084a0e498bf8c8c68586b1a84d92", features = ["signal", "fs"] }
#nix = { git = "file:///home/madoka/github_copies/nix", rev = "01a10675fd94084a0e498bf8c8c68586b1a84d92", features = ["signal", "fs"] }
